feat: Update .env.example with MongoDB connection string options

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PORT=3000
 NODE_ENV=development
 API_URL=http://localhost
 MONGODB_CONNECTION_STRING=mongodb://localhost/tasksdb
+# MONGODB_CONNECTION_STRING=mongodb://mongodb/tasksdb If you will run this with docker-compose
