--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,7 @@ PORT=3000
 NODE_ENV=development
 API_URL=http://localhost
 MONGODB_CONNECTION_STRING=mongodb://localhost/tasksdb
-# MONGODB_CONNECTION_STRING=mongodb://mongodb/tasksdb If you will run this with docker-compose
+# For docker compose
+# MONGODB_CONNECTION_STRING=mongodb://mongodb/tasksdb 
+# UID=1000
+# GID=1000
