feat: Update mongo action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,10 @@ jobs:
         # Executes the test command to run unit tests
 
       - name: Set up MongoDB
-        uses: docker/mongodb-github-action@v1
+        uses: supercharge/mongodb-github-action@1.8.0
         with:
-          mongodb-version: '6.0.4'
-          auth: 'false'
-        # Set up MongoDB version 6.0.4
+          mongodb-version: 6.0
+        # Set up MongoDB version 6.0
 
       - name: Run e2e tests
         run: npm run test:e2e
