--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
         run: npm run test
         # Executes the test command to run unit tests
 
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+        # Copy .env.example to .env
       - name: Set up MongoDB
         uses: supercharge/mongodb-github-action@1.8.0
         with:
