--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
     docker:
+      - image: mongo:6.0.4-jammy
       - image: node:20-alpine
     # Then run your tests!
     # CircleCI will report the results back to your VCS provider.
