--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,27 +9,26 @@ orbs:
   node: circleci/node@5.1.0
 
 jobs:
-  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:
-    # These next lines define a Docker executor: https://circleci.com/docs/executor-types/
-    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
+  build:
+    # Configuración del trabajo de construcción
     docker:
-      - image: circleci/node:19.8.1
-      - image: mongo:6.0.4-jammy
-    # Then run your tests!
-    # CircleCI will report the results back to your VCS provider.
+      - image: node:20-alpine
     steps:
-      # Checkout the code as the first step.
       - checkout
-      # Next, the node orb's install-packages step will install the dependencies from a package.json.
-      # The orb install-packages step will also automatically cache them for faster future runs.
       - node/install-packages:
-          # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+
+  test:
+    # Configuración del trabajo de pruebas
+    docker:
+      - image: mongo:6.0.4-jammy
+    steps:
+      - checkout
       - run:
           name: Run tests
           command: npm test
+    requires:
+      - build
 
 workflows:
   # Below is the definition of your workflow.
@@ -38,6 +37,5 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/configuration-reference/#workflows
   sample:
     jobs:
-      - build-and-test
-      # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
-      # - node/test
+      - build
+      - test
