--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,19 +19,18 @@ jobs:
           pkg-manager: npm
 
   test:
-    # Configuración del trabajo de pruebas
     docker:
-      - image: node:20-alpine
-      - image: mongo:6.0.4-jammy
+      - image: mongo:6.0.3
     steps:
       - checkout
       - run:
-          name: Install Node.js
+          name: Install Node.js and npm
           command: |
             curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
             sudo apt-get install -y nodejs
-      - node/install-packages:
-          pkg-manager: npm
+      - run:
+          name: Install project dependencies
+          command: npm ci
       - run:
           name: Run tests
           command: npm test
