--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,11 @@ jobs:
     docker:
       - image: mongo:6.0.3
     steps:
-      #- run:
-      #    name: Update and install dependencies
-      #    command: |
-      #      apt-get update
-      #      apt-get install -y curl sudo
+      - run:
+          name: Update and install dependencies
+          command: |
+            apt-get update
+            apt-get install -y curl sudo
       - checkout
       - run:
           name: Install Node.js and npm
