--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,32 +10,43 @@ orbs:
 
 jobs:
   build:
-    # Configuración del trabajo de construcción
+    # Build job configuration
     docker:
       - image: node:20-alpine
     steps:
+      # Checkout the code from the repository
       - checkout
       - node/install-packages:
           pkg-manager: npm
 
   test:
+    # Test job configuration
     docker:
       - image: mongo:6.0.3
     steps:
+      # Update the package list and install curl and sudo
       - run:
           name: Update and install dependencies
           command: |
             apt-get update
             apt-get install -y curl sudo
+
+      # Checkout the code from the repository
       - checkout
+
+      # Install Node.js and npm
       - run:
           name: Install Node.js and npm
           command: |
             curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
             sudo apt-get install -y nodejs
+
+      # Install project dependencies from package.json using npm ci
       - run:
           name: Install project dependencies
           command: npm ci
+
+      # Run tests using npm test
       - run:
           name: Run tests
           command: npm test
