--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,32 @@ jobs:
           name: Run tests
           command: npm test
 
+  deploy-to-vercel:
+    # Build job configuration
+    docker:
+      - image: node:20-alpine
+    environment:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+    steps:
+      # Checkout the code from the repository
+      - checkout
+      - run:
+          name: Install Vercel CLI
+          command: npm install --global vercel@latest
+
+      - run:
+          name: Pull Vercel Environment Information
+          command: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+      - run:
+          name: Build Project Artifacts
+          command: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+      - run:
+          name: Deploy Project Artifacts to Vercel
+          command: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
@@ -62,3 +88,6 @@ workflows:
       - test:
           requires:
             - build
+      - deploy-to-vercel:
+          requires:
+            - test
