feat: Add filters on jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,9 +82,26 @@ workflows:
   sample:
     jobs:
       - build
+        filters:
+          branches:
+            only: main
+          events:
+            - pull
+            - push
       - test:
           requires:
             - build
+          filters:
+            branches:
+              only: main
+            events:
+              - pull
+              - push
       - deploy-to-vercel:
           requires:
             - test
+          filters:
+            branches:
+              only: main
+            events:
+              - push
