fix: Fix CircleCI configuration syntax error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/configuration-reference/#workflows
   sample:
     jobs:
-      - build
+      - build:
         filters:
           branches:
             only: main
