--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,19 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
+parameters:
+  GHA_Actor:
+    type: string
+    default: ''
+  GHA_Action:
+    type: string
+    default: ''
+  GHA_Event:
+    type: string
+    default: ''
+  GHA_Meta:
+    type: string
+    default: ''
 
 orbs:
   # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
@@ -18,6 +31,12 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: npm
+      - run:
+        name: List GHA parameters
+        command: |
+          echo "GHA_Action: $GHA_Action"
+          echo "GHA_Event: $GHA_Event"
+          echo "GHA_Meta: $GHA_Meta"
 
   test:
     # Test job configuration
