feat: Add new workflow to test show-gha-vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,10 +103,12 @@ workflows:
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/configuration-reference/#workflows
+  test:
+    when: << pipeline.parameters.GHA_Action >>
+    jobs:
+      - show-gha-vars
   sample:
     jobs:
-      - show-gha-vars:
-          when: << pipeline.parameters.GHA_Action >>
       - build:
           filters:
             branches:
