fix: Correct Conditional Logic Syntax in .circleci/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,7 @@ workflows:
     when: << pipeline.parameters.GHA_Action >>
     jobs:
       when:
-        equal: ['release' || 'pull_request', << pipeline.parameters.GHA_Event >>]
+        equal: ['release', 'pull_request', << pipeline.parameters.GHA_Event >>]
       - build:
           filters:
             branches:
