--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,9 @@ workflows:
       - show-gha-vars
   sample:
     when:
-      equal: ['release', 'pull_request', << pipeline.parameters.GHA_Event >>]
+      or:
+        - equal: ['pull_request', << pipeline.parameters.GHA_Event >>]
+        - equal: ['release', << pipeline.parameters.GHA_Event >>]
     jobs:
       - build:
           filters:
