--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,15 +104,15 @@ workflows:
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/configuration-reference/#workflows
-  test:
+  show:
     when: << pipeline.parameters.GHA_Action >>
     jobs:
       - show-gha-vars
-  sample:
+  build_and_test:
     when:
       or:
-        - equal: ['pull_request', << pipeline.parameters.GHA_Event >>]
-        - equal: ['release', << pipeline.parameters.GHA_Event >>]
+        - equal: [pull_request, << pipeline.parameters.GHA_Event >>]
+        - equal: [release, << pipeline.parameters.GHA_Event >>]
     jobs:
       - build:
           filters:
@@ -126,7 +126,7 @@ workflows:
               only: main
   deploy:
     when:
-      equal: ['release', << pipeline.parameters.GHA_Event >>]
+      equal: [release, << pipeline.parameters.GHA_Event >>]
     jobs:
       - deploy-to-vercel:
           requires:
