--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
             echo "GHA_Action is << pipeline.parameters.GHA_Action >>"
             echo "GHA_Event is << pipeline.parameters.GHA_Event >>"
             echo "GHA_Meta is << pipeline.parameters.GHA_Meta >>"
+            echo "CIRCLE_PULL_REQUEST: $CIRCLE_PULL_REQUEST"
+            echo "CIRCLE_BRANCH: $CIRCLE_BRANCH"
+            echo "pipeline.git.branch: $pipeline.git.branch"
 
   build:
     # Build job configuration
